# AdaptiveSurfelMapping

./: .gitignore  CMakeLists.txt  README.md  RotationTransform.py  build_map.cpp  build_map_py.cpp  experiment_one_step.sh  image_evaluation.ipynb  load_map.cpp  load_map_py.cpp  move_data.py  pre-processing.ipynb  preparation.json  prepare_data.py  requirements.txt  test_main.cpp
.ipynb_checkpoints/: pre-processing-checkpoint.ipynb
Pangolin/examples/: CMakeLists.txt
Pangolin/examples/HelloPangolin/: main.cpp
Pangolin/examples/HelloPangolinThreads/: main.cpp
Pangolin/examples/myExample/: CMakeLists.txt  main.cpp
assets/: README.md
docs/: DATA_LAYOUT.md  DOWNLOADS.md  FILE_AUDIT.md  citation.bib
gui/: DatasetReader.cpp  DatasetReader.h  GUI.cpp  KittiReader.cpp  KittiReader.h
notebooks/: README.md  image_evaluation.ipynb  rl_evaluation_plot.ipynb
pybind11/: CMakeLists.txt
pybind11/tests/: requirements.txt
rl_evaluation/: Untitled.ipynb  build_map.py  experiment.sh  experiment2.sh  experiment_batch.sh  experiment_one_step.sh  experiment_one_stepssssssssssssssss.sh  move_data.py  rl_evaluate.py
rl_evaluation/DoE-main/: DOE_Opt_surfel.ipynb  DoE_surfel.ipynb  ResponseOutput.xls  Untitled.ipynb  df_psnr_paired.csv  df_ssim_paired.csv
rl_evaluation/DoE-main/.ipynb_checkpoints/: DOE_Opt-checkpoint.ipynb  DOE_Opt_surfel-checkpoint.ipynb  DoE_surfel-checkpoint.ipynb
rl_evaluation/DoE-main/evaluation_results/: lpips_left.csv  lpips_post_paired.csv  lpips_right.csv  psnr_paired.csv  psnr_right.csv  ssim_left.csv  ssim_right.csv
rl_evaluation/DoE-main/evaluation_results/tmp1/: lpips_paired.csv  lpips_right.csv  psnr_paired.csv  ssim_left.csv
rl_evaluation/PerceptualSimilarity-1.0/: compute_dists.py  compute_dists_dirs.py  compute_dists_pair.py  perceptual_loss.py  requirements.txt  test_network.py
rl_evaluation/PerceptualSimilarity-1.0/models/: __init__.py  dist_model.py
rl_evaluation/PerceptualSimilarity-1.0/util/: visualizer.py
rl_evaluation/evaluation_results/: lpips_paired.csv  psnr_left.csv  psnr_post_paired.csv  ssim_paired.csv  ssim_post_paired.csv
rl_evaluation/evaluation_results/tmp1/: lpips_left.csv  psnr_left.csv  psnr_right.csv  ssim_paired.csv  ssim_right.csv
rl_evaluation/src/: build_map.py  evaluate_images.py  img_sem_filter.py  load_map.py  move_data.py
src/: Config.cpp  Config.h  GlobalModel.cpp  SurfelMapping.cpp  SurfelMapping.h
src/Shaders/: data.vert  depth_filter.frag  draw_image.geom  draw_image_adaptive.geom  draw_surface_adaptive.geom  surfel_feedback.vert  surfels.glsl
